--- a/assets/style.css
+++ b/assets/style.css
@@ -67,18 +67,37 @@ body {
 }
 
 .navbar-custom .nav-link { 
-    color: white;
+    color: pink;
 }
 
-.navbar-custom .nav-item: hover .nav-link { 
+.navbar-custom { 
     color: white;
 }
 
 .navbar-custom .navbar-brand { 
     padding: 7px;
-    font-size: 30px;
+    font-size: 40px;
+    color: #79c6f7;
 }
 
+
+
+/*-- Colors for hover on nav-links --*/
+.home-link, .about-link, .projects-link, .software-link, .skills-link, .contacts-link { 
+    transition: border 0.3s;
+}
+
+.home-link:hover, .about-link:hover { 
+    border-bottom: 3px solid #79c6f7;
+}
+
+.projects-link:hover, .software-link:hover { 
+    border-bottom: 3px solid #8bb1ef;
+}
+
+.skills-link:hover, .contact-link:hover { 
+    border-bottom: 3px solid #a6a4f2;
+}
 
 
 /*=================================================================*/
@@ -213,8 +232,31 @@ body {
 }
 
 .blockquote { 
-    border-left: 3px solid white;
     padding-left: 20px;
+}
+
+.quote1 { 
+    background: linear-gradient( #79c6f7, #629fe5);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    border-left: 3px solid #79c6f7;
+}
+
+.quote2 { 
+    background: linear-gradient( #8bb1ef, #6a97d8 );
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    border-left: 3px solid #8bb1ef;
+}
+
+.quote3 { 
+    background: linear-gradient( #a6a4f2, #8985e2);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    border-left: 3px solid #a6a4f2;
 }
 
 .resume-btn { 
@@ -222,6 +264,8 @@ body {
     font-color: #232323;
     box-shadow: 5px 7px 1px gray;
 }
+
+
 
 /*=================================================================*/
 /*-- CONTACT --*/
