--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@ body {
     color: white;
 }
 
-.landing b , .landing i{ 
+.landing b { 
     color: #1fb6ff;
 }
 
@@ -139,6 +139,9 @@ body {
     height: 100vh;
 }
 
+.projects p { 
+    font-family: 'Varela Round';
+}
 
 .projects h1 { 
     text-align: right;
@@ -154,6 +157,10 @@ body {
     left: 1vw;
     background-color: #232323;
     padding: 40px;
+}
+
+.campus-corners { 
+    background-color: #3b55bf;
 }
 
 /*=================================================================*/
