--- a/assets/style.css
+++ b/assets/style.css
@@ -1,246 +1,121 @@
 
-/*=================================================================*/
-/*SECTIONS/GENERAL CSS*/
-/*=================================================================*/
-body { 
-    margin: 0;
-    background: #131313;
-    font-family: "Poppins", Arial, sans-serif;
-    color: white;
+
+@import url('https://fonts.googleapis.com/css?family=Raleway:300');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i');
+
+h3 { 
+    font-family: 'Playfair Display', Serif;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 1.9;
+    letter-spacing: 1px;
 }
 
-.site { 
-    margin-top: 100vh;
-    position: absolute;
-    background-color: white;
+.scroll-indicator { 
+    top: 0;
+    position: fixed;
+    height: 9px;
+    width: 0%;
+    z-index: 300;
+
+
+    background: rgb(113,139,168);
+    background: -moz-linear-gradient(90deg, rgba(113,139,168,1) 10%, rgba(150,169,193,1) 36%, rgba(253,204,196,1) 98%);
+    background: -webkit-linear-gradient(90deg, rgba(113,139,168,1) 10%, rgba(150,169,193,1) 36%, rgba(253,204,196,1) 98%);
+    background: linear-gradient(90deg, rgba(113,139,168,1) 10%, rgba(150,169,193,1) 36%, rgba(253,204,196,1) 98%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#718ba8",endColorstr="#fdccc4",GradientType=1);
 }
-
-/*=================================================================*/
-/* -- Landing Mast -- */
-/*=================================================================*/
-
 
 .landing { 
-    height: 100vh;
-    position: fixed;
-    background-color: #3b55bf;
+    font-family: 'Playfair Display';
+    height: 90vh;
+    text-align: center;
+    background-image: url(../assets/city.jpg);
     background-attachment: fixed;
-}
-
-
-.landing img { 
-    width: 50vw;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 900px;
+    margin: auto;
+    z-index: 3;
 }
 
 .landing h1 { 
-    font-weight: 300;
-    font-family: 'Comfortaa';
+    padding-top: 50%;
+    font-weight: 400;
     font-size: 90px;
-    letter-spacing: 9px;
-    text-align: right;
-    padding-top:15vh;
     color: white;
 }
 
-.landing b { 
-    color: #1fb6ff;
-}
-
-
-.landing p { 
-    font-family:"Varela Round", "Poppins", Arial, sans-serif;
-    font-size: 19px;
-    letter-spacing: 1px;
-    line-height: 1.6; 
-	text-align: right;
-    padding-left: 40px;
-    color: white;
-}
-
-/*=================================================================*/
-/*-- SOFTWARE --*/
-/*=================================================================*/
-
-.software { 
+.landing-background { 
     background-color: white;
-    color: #232323;
-    text-align: right;
-    padding: 7vh 7vw;
+    height: 100vh;
+    z-index: 1;
+    padding-top: 5vh;
+}
+
+
+.info { 
+    height: 100vh;
+    background-color: #232323;
+    color: white;
+    padding-top: 13%;
+    padding-right: 20%;
+    padding-left: 10%;
+    margin-bottom: 100vh;
 }
 
 
 
-.software h1 { 
-    font-family: 'Comfortaa';
-    text-align: left;
-    font-size: 70px;
-    padding-top: 15px;
-}
 
-.software h2 { 
-    color: #1fb6ff;
-    font-size: 65px;
-    padding-top: 15px;
-}
-
-.software h3 { 
-    color: #1b95f9;
+/*-- FOOTER --*/
+.contact { 
+    background-image: url(../assets/city.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    bottom: 0;
     font-size: 50px;
-    padding-top: 15px;
-}
-
-.software h4 { 
-    color: #1b7bf9;
-    font-size: 35px;
-    padding-top: 15px;
-}
-
-
-
-
-
-/*=================================================================*/
-/*-- SKILLS --*/
-/*=================================================================*/
-
-.skills li { 
-    list-style: none;
-    padding-top: 13px;
-}
-
-.skills { 
+    font-family: 'Raleway', Sans-Serif;
+    font-weight: 300; 
     text-align: center;
-    background-color: #1fb6ff;
-    font-size: 23px;
-    letter-spacing: 3px;
-    padding: 7vh 7vw;
+    position: fixed;
+    z-index: -3;
 }
 
-.skills h1 { 
-    font-family: 'Comfortaa';
-    text-align: left;
-    font-size: 70px;
-    padding-top: 15px;
+
+
+.contact ul{ 
+    list-style: none;
+    padding-top: calc(50vh - 187px);
+}
+
+
+.contact a:link, .contact a:visited { 
     color: white;
+    -webkit-transition: 1s; /* Safari */
+    transition: 1s;
 }
 
-.skills img { 
-    width: 50vw;
+.contact a:hover { 
+    color: #9DC7F0;
 }
 
+/*-- Media Queries for responsive design --*/
 
-/*=================================================================*/
-/*-- PROJECTS --*/
-/*=================================================================*/
+@media only screen and (max-width: 900px) {
+    .landing h1 { 
+        font-size: 50px;
+    }
+    .landing { 
+        width: 80%;
+        margin: 0 10%;
+    }
+   
+    h3 { 
+        font-size: 23px;
+    }
 
-.projects { 
-    background-color: white;
-    color: #232323;
-    height: 30vh;
-}
-
-
-.projects h1 { 
-    text-align: right;
-    font-family: 'Comfortaa';
-    font-size: 50px;
-    padding:13vh 7vw;
-    
-}
-
-.cc-title h1 { 
-    color: rgba(256,256,256, 0.3);
-    font-family:'Josefin Sans';
-    font-size: 70px;
-    text-align: left;
-    padding: 0;
-}
-
-.cc-card { 
-    width: 39vw;
-    margin-left: 13vw;
-    padding: 30px 90px;
-    background-color: #3b55bf;
-}
-
-.hundred-card { 
-    font-family: 'Varela Round';
-    width: 39vw;
-    margin-left: 50vw;
-    padding: 30px 90px;
-    margin-bottom: 5vh;
-    background-color: #1fb6ff;
-}
-
-
-.project-card { 
-    font-family: 'Comfortaa';
-    color: white;
-    margin-top: 50px;
-    border-radius: 7px;
-    box-shadow: 7px 7px 17px lightgray;
-}
-
-
-/*=================================================================*/
-/*-- CONTACT --*/
-/*=================================================================*/
-
-
-.social { 
-    background-color: #3b55bf;
 
 }
- 
-.contact-title { 
-    padding: 3vw;
-}
-
-.contact-title h2 { 
-    font-size: 70px;
-    font-family: 'Comfortaa';
-    letter-spacing: 3px;
-}
-
-
-.links-wrapper { 
-    text-align: right;
-    font-size: 50px;
-}
-
-.links-wrapper a:link, .links-wrapper a:hover, .links-wrapper a:visited { 
-    font-family: 'Comfortaa';
-    color: white;
-}
-
-
-/*-- TYPOGRAPHY --*/
-
-
-
-
-
-
-
-/*-- Just a bootstrap padding fix I heard about online lmao --*/
-
-[class*="col-"] { 
-    padding: 1rem;
-}
-
-
-/*---Media Queries---*/
-
-
-
-
-
-
-
-
-
-
-
-
-
 
