--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,20 @@
     --secondary-bg-color: #1D1C1D;
     --main-bg-color: #EFEDED;
     --accent-color: #4172B1;
+    --darker-accent: #7F7D7F;
     --main-font: 'Raleway', sans-serif;
     scroll-behavior: smooth;
+}
+
+.gridline {
+  display: block;
+  position: absolute;
+  height: 2450px;
+  top: 10%;
+  left: 3%;
+  width: 3px;
+  z-index: 3;
+  background-color: var(--darker-accent);
 }
 
 /* Use H2 for side-titles */
@@ -32,7 +44,7 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: var(--main-bg-color);
 }
 
@@ -40,6 +52,90 @@ html, body {
     color: var(--accent-color);
 }
 
+/*--- PRELOADER BS ---*/
+
+.preloader {
+  background-color: var(--secondary-bg-color);
+  text-align: center;
+  position: absolute;
+  height: 900vh;
+  width: 100%;
+  z-index:998;
+  animation: reveal-site 1s ease forwards;
+  animation-delay: 3s;
+}
+
+.preloader h6 {
+  position: fixed;
+  top: 50%;
+  left:50%;
+  margin: 0;
+  transform: translate(-50%,-50%);
+  color: var(--main-bg-color);
+  font-family: 'Raleway', monospace;
+  font-size: 50px;
+  animation: fade 3s linear forwards;
+}
+
+.preloader h6::after {
+  position: absolute;
+  content:"";
+  top: 0;
+  left: 0;
+  z-index: 999;
+  background-color: var(--accent-color);
+  height: 100%;
+  width: 0%;
+  animation: dan-swipe 1s ease forwards;
+  animation-iteration-count: 3;
+}
+
+.post-preloader {
+  z-index: 997;
+  background-color: var(--accent-color);
+  text-align: center;
+  position: absolute;
+  height: 900vh;
+  width: 100%;
+  animation: reveal-site 1s ease forwards;
+  animation-delay: 3.5s;
+}
+
+@keyframes dan-swipe {
+  0% {
+    width: 0%;
+    left: 0%;
+  }
+  50% {
+    width: 100%;
+    left: 0%;
+  }
+  100% {
+    left: 100%;
+    width: 0%;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes reveal-site {
+  0% {
+    left: 0;
+  }
+
+  100% {
+    width: 0;
+    left: 100%;
+  }
+}
 /*--- NAVIGATION ---*/
 
 nav {
@@ -49,6 +145,7 @@ nav {
     right: 0;
     text-align: right;
     margin-right: 17px;
+    background-color: var(--main-bg-color);
 }
 
 nav ul {
@@ -87,12 +184,13 @@ nav li {
 
 #landing {
     height: 100vh;
+    min-height: 700px;
     width: 100%;
 }
 
 .landing-title {
     position: absolute;
-    left: 3%;
+    left: 1%;
     margin: 0;
     padding: 0;
     z-index: 3;
@@ -104,15 +202,9 @@ nav li {
     margin: 0;
     color: var(--secondary-bg-color);
     letter-spacing: 3px;
-}
-
-.landing-title h1::before {
-    content:"";
-    border-left: 3px solid var(--secondary-bg-color);
-    display: block;
-    height: 56.6vh;
-    margin-top: 10vh;
-
+    padding: 5px 5px 5px 15px;
+    margin-top: 75%;
+    z-index: 5;
 }
 
 .landing-title h1::after {
@@ -160,6 +252,7 @@ nav li {
     top: 10%;
     transition: .3s ease;
     z-index: 1;
+
 }
 
 .landing-face:hover {
@@ -172,8 +265,8 @@ nav li {
     background-color: var(--accent-color);
     height: 150px;
     width: 10px;
-    top: 70vh;
-    left: 70vw;
+    top: 55%;
+    right: 3%;
 }
 
 @keyframes swipe {
@@ -189,7 +282,7 @@ nav li {
 
 #about {
     position: relative;
-    height: 100vh;
+    height: 700px;
     width: 100%;
 }
 
@@ -236,17 +329,18 @@ nav li {
   animation-direction: alternate;
 }
 
-.about-content p {
+p {
   font-family: var(--main-font);
   font-size: 20px;
-
 }
+
+
 
 /*--- SKILLS ---*/
 
 #skills {
   position: relative;
-  height: 100vh;
+  height: 900px;
   width: 100%;
 }
 
@@ -283,6 +377,101 @@ nav li {
   margin-right: 350px;
 }
 
+.skills-blurb {
+  margin-top: 50px;
+  padding-left: 50px;
+    border-left: 3px solid var(--accent-color);
+}
+
+.skills-list ul {
+  list-style-type: none;
+}
+
+.skills-list li {
+  font-family: var(--main-font);
+  font-size: 25px;
+  padding-left: 15px;
+  padding-top: 17px;
+  color: var(--secondary-bg-color);
+  cursor: pointer;
+}
+
+/*--- CONTACT ---*/
+
+#contact {
+  position: relative;
+  height: 700px;
+  width: 100%;
+}
+
+.contact-blurb {
+  font-family: var(--main-font);
+  font-size: 75px;
+  position: absolute;
+  top: 25%;
+  left: 7%;
+  color: var(--accent-color);
+  line-height: 0;
+}
+
+.contact-side {
+  margin-top: -30px;
+}
+
+.contact-links {
+  list-style-type: none;
+  position: absolute;
+  left: 3%;
+  border-left: 3px solid var(--darker-accent);
+  top: 35%;
+  padding-top: 75px;
+  padding-left: 4%;
+  bottom: 50px;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 30px;
+}
+
+.contact-links li {
+  padding-top: 35px;
+}
+
+.contact-links a {
+  text-decoration: none;
+  color: var(--secondary-bg-color);
+}
+
+.about-site {
+  position: absolute;
+  bottom: 1%;
+  left: 3%;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 20px;
+  padding-left: 7px;
+}
+
+.about-site h5:after{
+  content: " _";
+  color: var(--accent-color);
+  animation-name: blink;
+  animation-duration: 700ms;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+.contact-embellishment {
+  position: absolute;
+  display: block;
+  background-color: var(--accent-color);
+  height: 175px;
+  width: 10px;
+  bottom: 30%;
+  right: 3%;
+  animation-name: contact-flair;
+  animation-duration: 3000ms;
+  animation-iteration-count: infinite;
+  animation-direction: forwards;
+}
+
 
 /*--- ANIMATIONS ---*/
 
@@ -293,6 +482,23 @@ nav li {
 
     100% {
         opacity: 1;
+    }
+}
+
+@keyframes contact-flair {
+    0% {
+      height: 0px;
+      bottom: 30%;
+    }
+
+    50% {
+      height: 175px;
+      bottom: 30%;
+    }
+
+    100% {
+      height: 0px;
+      bottom: calc(30% + 175px);
     }
 }
 
