--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300');
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:100');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:100&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 :root { 
     --main-text-color: #EFEDED;
     --main-bg-color:;
-    --blinds-bg-color: lightgray;
+    --blinds-color:#EFEDED;
+    --about-color: #16425B;
+    --about-secondary: #D9DCD6;
     --main-font: 'Open Sans', sans-serif;
+    --secondary-font: 'Roboto Mono', monospace;
 }
 
 html, body {
@@ -17,28 +18,7 @@ html, body {
     height: 100%;
 }
 
-.blinds { 
-    background-color: transparent;
-    width:100%;
-    height:100vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-.blinds-1 { 
-   background-color: var(--blinds-bg-color);
-   animation: bg-swipe 1s forwards;
-   z-index: 99;
-}
-
-.blinds-2 { 
-   background-color: var(--blinds-bg-color);
-   animation: bg-swipe 1s forwards;
-   z-index: 99;
-}
-
-.blinds-3 { 
-}
+/* --- BAKCGROUND STUFF --- */
 
 .bg { 
     background-color: #333;
@@ -46,45 +26,109 @@ html, body {
     height:100vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    z-index: 9;
-}
-
-
-.bg h3 { 
-    font-family: 'Roboto-Mono', monospace;
-    font-size: 25px;
-    position: absolute; 
-    bottom: 20px;
-    color: var(--main-text-color);
-    margin-left: 50px;
-    padding-bottom: 5px;
-    border-bottom: 3px solid gray;
-    cursor: pointer;
-}
-
-.bg-1-pre { 
-    position: absolute;
-    border-right: 1px solid gray;
-    -webkit-transition: all .3s linear 0s;
-    transition: all .3s linear 0s;
-}
-
-.bg-2-pre { 
-    position: absolute;
-}
-
-.bg-3-pre { 
-    position: absolute;
+    z-index: 0;
 }
 
 .bg-1-wrapper, .bg-2-wrapper, .bg-3-wrapper { 
     position: relative;
 }
 
-.bg-1 h3:hover, .bg-2 h3:hover, .bg-3 h3:hover { 
+/* --- NAV LIST --- */
+
+.nav-list { 
+    position: fixed;
+    left: 25px;
+    bottom: 25px;
+    z-index: 99;
+}
+
+.nav-list ul { 
+    list-style-type: none;
+    font-family: var(--secondary-font);
+    color: var(--main-text-color);
+    font-size: 23px;
+}
+
+li {  
+    padding-top: 2.5px;
+    padding-bottom: 2.5px;
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;          /* Likely future */   
+}
+
+li:hover {
     -webkit-transition: all 0.1s linear;
     transition: all 0.1s linear;
     transform: scale3d(1.1, 1.1, 1); 
+}    
+
+li a { 
+    text-decoration: none;
+    color: var(--main-text-color);
+}
+
+#about-button, #toggle_colorscheme { 
+    cursor: pointer;
+}
+
+
+/*--- ABOUT ---*/
+
+#about { 
+    position: fixed;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--about-color);
+    z-index: 7;
+    display: none;
+    color: var(--main-text-color);
+    grid-template-columns: 500px 1fr 1fr;
+}
+
+.about-site { 
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+.about-site h3, .about-author h3 { 
+    font-family: var(--main-font);
+    font-size: calc(17px * 1.618);
+}
+
+.about-site p, .about-author p { 
+    font-family: var(--secondary-font);
+    font-size: 17px;
+    line-height: 35px;
+}
+
+.about-author { 
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
+
+.about-author a { 
+    color: var(--main-text-color);
+}
+
+.about-author, .about-site { 
+    padding: 0px 150px 0px 0px;
+    position: absolute; 
+    top: 30%;
+}
+
+#transition_about { 
+    position: fixed;
+    top:0;
+    height: 100%;
+    background-color: var(--about-secondary);
+    z-index: 9;
+}
+
+.transition_about_swipe { 
+    animation: swipe-reveal 1s ease forwards;
 }
 
 .bg-1 { 
@@ -102,23 +146,11 @@ html, body {
     height: 100%;
 }
 
-.bg-1-transition { 
-    background-color: #16425B;
-    width: 100%;
-    height: 100%;
-    animation: bg-swipe .5s forwards;
-}
-.bg-2-transition { 
-    background-color: #2F6690;
-    width: 100%;
-    height: 100%;
-    animation: bg-swipe .5s forwards;
-}
-.bg-3-transition { 
-    background-color: #3A7CA5;
-    width: 100%;
-    height: 100%;
-    animation: bg-swipe .5s forwards;
+.bg-pre { 
+    height:100%;
+    position: absolute;
+    left:0;
+    background-color: var(--blinds-color);
 }
 
 @keyframes bg-swipe { 
@@ -145,15 +177,26 @@ html, body {
     color: var(--main-text-color);
 }
 
-.nav-list ul { 
-    list-style-type: none;
-    font-family: 'Roboto Mono', monospace;
-    color: var(--main-text-color);
-    font-size: 23px;
-    padding: 0;
+
+/*--- ANIMATIONS ---*/
+
+@keyframes swipe-reveal { 
+    0% { 
+        left:0;
+        width: 0;
+        
+    }
+    50% { 
+        width:100%;
+        left:0;
+    }
+    100% { 
+        width: 0;
+        left: 100%;
+    }
 }
 
-/*-- Media Queries for responsive design --*/
+
 
 @media only screen and (max-width: 900px) {
     .landing h1 { 
@@ -167,7 +210,6 @@ html, body {
     h3 { 
         font-size: 23px;
     }
-
 
 }
 
