--- a/css/preloader.css
+++ b/css/preloader.css
@@ -1,8 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=Major+Mono+Display&display=swap');
+
 .preloader { 
-    color: gray;
     width: 100%;
     height:100vh;
     position: absolute;
+    background-color: #16425B;
     z-index: 999;
 }
+
+.preloader h1 { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-family: 'Major Mono Display', monospace;
+    color: white;
+
+}
+
 
